<resources>
    <string name="app_name">Assistd</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="join_room">Join</string>
    <string name="exit_mobile_connect">确认退出手机连接吗？</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="connect">连接</string>
    <string name="server_tips">信令服务器</string>
    <string name="default_server">172.16.12.218:8089</string>
    <string name="reset">重置</string>
    <string name="mobile_ctrl_back">返回</string>
    <string name="mobile_ctrl_home">主页</string>
    <string name="mobile_ctrl_recent">最近</string>
    <string name="mobile_ctrl_mute">静音</string>
    <string name="mobile_ctrl_exit">退出</string>
    <string name="assistd">AssistD</string>
</resources>